--- a/main.html
+++ b/main.html
@@ -4,10 +4,61 @@
 	<meta charset="UTF-8">
 	<title>Streetfighter</title>
 	<link rel="stylesheet" href="css/normalize.css">
+	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
+	<section class="game-area">
+		<div class="ryu-container">
+			<div class="ryu">
+				<div class="ryu-ready" style="display: none;"></div>
+				<div class="ryu-still ryu-action" style="display: block;"></div>
+				<div class="ryu-throwing ryu-action" style="display: none;"></div>
+				<div class="ryu-cool ryu-action" style="display: none;"></div>
+			</div>
+		</div>
+		<div class="text-container">
+			<div class="sf-logo"></div>	
+			<div class="jquery-logo"></div>
+			<div class="sponsored-by"></div>
+			<div class="game-rules"></div>
+		</div>
+		
+
+
+
+
+
+	</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
