--- a/main.html
+++ b/main.html
@@ -5,31 +5,41 @@
 	<title>Streetfighter</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Carter+One' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<section class="game-area">
 		<div class="ryu-container">
 			<div class="ryu">
-				<div class="ryu-ready" style="display: none;"></div>
-				<div class="ryu-still ryu-action" style="display: block;"></div>
-				<div class="ryu-throwing ryu-action" style="display: none;"></div>
-				<div class="ryu-cool ryu-action" style="display: none;"></div>
+				<div class="ryu-still ryu-action"></div>
+				<div class="ryu-ready ryu-action"></div>
+				<div class="ryu-throwing ryu-action"></div>
+				<div class="ryu-cool ryu-action"></div>
 			</div>
+			<div class="hadouken"></div>
 		</div>
 		<div class="text-container">
 			<div class="sf-logo"></div>	
 			<div class="jquery-logo"></div>
 			<div class="sponsored-by"></div>
-			<div class="game-rules"></div>
+			<div class="game-rules">
+				<p>Click on Ryu to make him throw a Hadouken.</p>
+				<p>Press and hold down the "x" key to make him strike his cool pose!</p>
+			</div>
 		</div>
 		
 
 
-
-
-
 	</section>
+	
+
+	<!-- IS IT NECESSARY TO NEST THE AUDIO?? -->
+<audio id="sf-theme" src="../sound/sf-theme.mp3">
+	<audio id="hadouken-audio" src="../sound/hadouken.mp3">
+		<audio id="ryu-audio" src="../sound/ryu-cool.mp3"></audio>
+	</audio>
+</audio>
 
 
 
