--- a/main.html
+++ b/main.html
@@ -12,10 +12,10 @@
 	<section class="game-area">
 		<div class="ryu-container">
 			<div class="ryu">
-				<div class="ryu-still ryu-action"></div>
-				<div class="ryu-ready ryu-action"></div>
-				<div class="ryu-throwing ryu-action"></div>
-				<div class="ryu-cool ryu-action"></div>
+				<div class="ryu-still"></div>
+				<div class="ryu-ready"></div>
+				<div class="ryu-throwing"></div>
+				<div class="ryu-cool"></div>
 			</div>
 			<div class="hadouken"></div>
 		</div>
@@ -28,47 +28,10 @@
 				<p>Press and hold down the "x" key to make him strike his cool pose!</p>
 			</div>
 		</div>
-		
-
-
 	</section>
-	
-
-	<!-- IS IT NECESSARY TO NEST THE AUDIO?? -->
-<audio id="sf-theme" src="../sound/sf-theme.mp3">
-	<audio id="hadouken-audio" src="../sound/hadouken.mp3">
-		<audio id="ryu-audio" src="../sound/ryu-cool.mp3"></audio>
-	</audio>
-</audio>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	<audio id="sf-theme" src="sound/sf_theme.mp3" type="audio/mp3"></audio>
+	<audio id="hadouken-audio" src="sound/hadouken.mp3" type="audio/mp3"></audio>
+	<audio id="ryu-audio" src="sound/ryu_cool.mp3" type="audio/mp3"></audio>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
