Final code additions and comments.

--- a/main.html
+++ b/main.html
@@ -21,7 +21,9 @@
 		</div>
 		<div class="text-container">
 			<div class="sf-logo"></div>	
-			<div class="jquery-logo"></div>
+			<div class="jquery-logo">
+				<p id="jquery-text">Interactivity brought to you by...</p>
+			</div>
 			<div class="sponsored-by"></div>
 			<div class="game-rules">
 				<p>Click on Ryu to make him throw a Hadouken.</p>
