--- a/main.html
+++ b/main.html
@@ -35,6 +35,6 @@
 	<audio id="hadouken-audio" src="sound/hadouken.mp3" type="audio/mp3"></audio>
 	<audio id="ryu-audio" src="sound/ryu_cool.mp3" type="audio/mp3"></audio>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
-	<script src="js/app.js"></script>
+	<script src="../js/app.js"></script>
 </body>
 </html>
